Compiler_UPT/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIV

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ProgramHeader ProgramBody
Rule 2     ProgramHeader -> PROGRAM ID SEMICOLON
Rule 3     ProgramBody -> FuncDecls VarDecls Cmd
Rule 4     FuncDecls -> empty
Rule 5     FuncDecls -> Function FuncDecls
Rule 6     Function -> FunctionHeader FunctionBody
Rule 7     FunctionHeader -> FunctionType FUNCTION ID PAR_OPEN ParamList PAR_CLOSE COLON
Rule 8     FunctionType -> INT
Rule 9     FunctionType -> BOOL
Rule 10    FunctionType -> VOID
Rule 11    FunctionBody -> LBRACE VarDecls CmdList RBRACE
Rule 12    ParamList -> empty
Rule 13    ParamList -> ParamList1
Rule 14    ParamList1 -> Param COMMA ParamList1
Rule 15    ParamList1 -> Param
Rule 16    Param -> ID COLON Type
Rule 17    empty -> <empty>
Rule 18    VarDecls -> empty
Rule 19    VarDecls -> VarDecl VarDecls
Rule 20    VarDecl -> VAR ID COLON Type SEMICOLON
Rule 21    Type -> INT
Rule 22    Type -> BOOL
Rule 23    Expr -> NUMBER
Rule 24    Expr -> TRUE
Rule 25    Expr -> FALSE
Rule 26    Expr -> ID
Rule 27    Expr -> Expr BinOp Expr
Rule 28    Expr -> UnOp Expr
Rule 29    Expr -> PAR_OPEN Expr PAR_CLOSE
Rule 30    Expr -> ID PAR_OPEN ExprList PAR_CLOSE
Rule 31    Expr -> READ PAR_OPEN PAR_CLOSE
Rule 32    BinOp -> PLUS
Rule 33    BinOp -> MINUS
Rule 34    BinOp -> TIMES
Rule 35    BinOp -> EXPO
Rule 36    BinOp -> MOD
Rule 37    BinOp -> DIF
Rule 38    BinOp -> EQUALS
Rule 39    BinOp -> LESS
Rule 40    BinOp -> GREATER
Rule 41    BinOp -> LESS_EQUAL
Rule 42    BinOp -> GREATER_EQUAL
Rule 43    BinOp -> AND
Rule 44    BinOp -> OR
Rule 45    UnOp -> MINUS
Rule 46    UnOp -> NOT
Rule 47    ExprList -> empty
Rule 48    ExprList -> ExprList1
Rule 49    ExprList1 -> Expr
Rule 50    ExprList1 -> Expr COMMA ExprList1
Rule 51    Cmd -> CmdAtrib
Rule 52    Cmd -> CmdIf
Rule 53    Cmd -> CmdWhile
Rule 54    Cmd -> CmdFor
Rule 55    Cmd -> CmdBreak
Rule 56    Cmd -> CmdPrint
Rule 57    Cmd -> CmdReturn
Rule 58    Cmd -> CmdSeq
Rule 59    CmdAtrib -> ID
Rule 60    CmdAtrib -> Expr
Rule 61    CmdAtrib -> ID ASSIGN Expr
Rule 62    CmdIf -> IF Expr COLON Cmd
Rule 63    CmdIf -> IF Expr COLON Cmd ELSE COLON
Rule 64    CmdWhile -> WHILE Expr COLON Cmd
Rule 65    CmdFor -> FOR CmdAtrib TO Expr COLON Cmd
Rule 66    CmdBreak -> BREAK
Rule 67    CmdPrint -> PRINT PAR_OPEN ExprList PAR_CLOSE
Rule 68    CmdReturn -> RETURN Expr
Rule 69    CmdSeq -> LBRACE CmdList RBRACE
Rule 70    CmdList -> Cmd SEMICOLON CmdList
Rule 71    CmdList -> Cmd

Terminals, with rules where they appear

AND                  : 43
ASSIGN               : 61
BOOL                 : 9 22
BREAK                : 66
COLON                : 7 16 20 62 63 63 64 65
COMMA                : 14 50
DIF                  : 37
DIV                  : 
ELSE                 : 63
EQUALS               : 38
EXPO                 : 35
FALSE                : 25
FOR                  : 65
FUNCTION             : 7
GREATER              : 40
GREATER_EQUAL        : 42
ID                   : 2 7 16 20 26 30 59 61
IF                   : 62 63
INT                  : 8 21
LBRACE               : 11 69
LESS                 : 39
LESS_EQUAL           : 41
MINUS                : 33 45
MOD                  : 36
NOT                  : 46
NUMBER               : 23
OR                   : 44
PAR_CLOSE            : 7 29 30 31 67
PAR_OPEN             : 7 29 30 31 67
PLUS                 : 32
PRINT                : 67
PROGRAM              : 2
RBRACE               : 11 69
READ                 : 31
RETURN               : 68
SEMICOLON            : 2 20 70
TIMES                : 34
TO                   : 65
TRUE                 : 24
VAR                  : 20
VOID                 : 10
WHILE                : 64
error                : 

Nonterminals, with rules where they appear

BinOp                : 27
Cmd                  : 3 62 63 64 65 70 71
CmdAtrib             : 51 65
CmdBreak             : 55
CmdFor               : 54
CmdIf                : 52
CmdList              : 11 69 70
CmdPrint             : 56
CmdReturn            : 57
CmdSeq               : 58
CmdWhile             : 53
Expr                 : 27 27 28 29 49 50 60 61 62 63 64 65 68
ExprList             : 30 67
ExprList1            : 48 50
FuncDecls            : 3 5
Function             : 5
FunctionBody         : 6
FunctionHeader       : 6
FunctionType         : 7
Param                : 14 15
ParamList            : 7
ParamList1           : 13 14
Program              : 0
ProgramBody          : 1
ProgramHeader        : 1
Type                 : 16 20
UnOp                 : 28
VarDecl              : 19
VarDecls             : 3 11 19
empty                : 4 12 18 47

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ProgramHeader ProgramBody
    (2) ProgramHeader -> . PROGRAM ID SEMICOLON

    PROGRAM         shift and go to state 3

    Program                        shift and go to state 1
    ProgramHeader                  shift and go to state 2

state 1

    (0) S' -> Program .



state 2

    (1) Program -> ProgramHeader . ProgramBody
    (3) ProgramBody -> . FuncDecls VarDecls Cmd
    (4) FuncDecls -> . empty
    (5) FuncDecls -> . Function FuncDecls
    (17) empty -> .
    (6) Function -> . FunctionHeader FunctionBody
    (7) FunctionHeader -> . FunctionType FUNCTION ID PAR_OPEN ParamList PAR_CLOSE COLON
    (8) FunctionType -> . INT
    (9) FunctionType -> . BOOL
    (10) FunctionType -> . VOID

    VAR             reduce using rule 17 (empty -> .)
    ID              reduce using rule 17 (empty -> .)
    IF              reduce using rule 17 (empty -> .)
    WHILE           reduce using rule 17 (empty -> .)
    FOR             reduce using rule 17 (empty -> .)
    BREAK           reduce using rule 17 (empty -> .)
    PRINT           reduce using rule 17 (empty -> .)
    RETURN          reduce using rule 17 (empty -> .)
    LBRACE          reduce using rule 17 (empty -> .)
    NUMBER          reduce using rule 17 (empty -> .)
    TRUE            reduce using rule 17 (empty -> .)
    FALSE           reduce using rule 17 (empty -> .)
    PAR_OPEN        reduce using rule 17 (empty -> .)
    READ            reduce using rule 17 (empty -> .)
    MINUS           reduce using rule 17 (empty -> .)
    NOT             reduce using rule 17 (empty -> .)
    INT             shift and go to state 10
    BOOL            shift and go to state 11
    VOID            shift and go to state 12

    ProgramBody                    shift and go to state 4
    FuncDecls                      shift and go to state 5
    empty                          shift and go to state 6
    Function                       shift and go to state 7
    FunctionHeader                 shift and go to state 8
    FunctionType                   shift and go to state 9

state 3

    (2) ProgramHeader -> PROGRAM . ID SEMICOLON

    ID              shift and go to state 13


state 4

    (1) Program -> ProgramHeader ProgramBody .

    $end            reduce using rule 1 (Program -> ProgramHeader ProgramBody .)


state 5

    (3) ProgramBody -> FuncDecls . VarDecls Cmd
    (18) VarDecls -> . empty
    (19) VarDecls -> . VarDecl VarDecls
    (17) empty -> .
    (20) VarDecl -> . VAR ID COLON Type SEMICOLON

    ID              reduce using rule 17 (empty -> .)
    IF              reduce using rule 17 (empty -> .)
    WHILE           reduce using rule 17 (empty -> .)
    FOR             reduce using rule 17 (empty -> .)
    BREAK           reduce using rule 17 (empty -> .)
    PRINT           reduce using rule 17 (empty -> .)
    RETURN          reduce using rule 17 (empty -> .)
    LBRACE          reduce using rule 17 (empty -> .)
    NUMBER          reduce using rule 17 (empty -> .)
    TRUE            reduce using rule 17 (empty -> .)
    FALSE           reduce using rule 17 (empty -> .)
    PAR_OPEN        reduce using rule 17 (empty -> .)
    READ            reduce using rule 17 (empty -> .)
    MINUS           reduce using rule 17 (empty -> .)
    NOT             reduce using rule 17 (empty -> .)
    VAR             shift and go to state 17

    VarDecls                       shift and go to state 14
    empty                          shift and go to state 15
    VarDecl                        shift and go to state 16

state 6

    (4) FuncDecls -> empty .

    VAR             reduce using rule 4 (FuncDecls -> empty .)
    ID              reduce using rule 4 (FuncDecls -> empty .)
    IF              reduce using rule 4 (FuncDecls -> empty .)
    WHILE           reduce using rule 4 (FuncDecls -> empty .)
    FOR             reduce using rule 4 (FuncDecls -> empty .)
    BREAK           reduce using rule 4 (FuncDecls -> empty .)
    PRINT           reduce using rule 4 (FuncDecls -> empty .)
    RETURN          reduce using rule 4 (FuncDecls -> empty .)
    LBRACE          reduce using rule 4 (FuncDecls -> empty .)
    NUMBER          reduce using rule 4 (FuncDecls -> empty .)
    TRUE            reduce using rule 4 (FuncDecls -> empty .)
    FALSE           reduce using rule 4 (FuncDecls -> empty .)
    PAR_OPEN        reduce using rule 4 (FuncDecls -> empty .)
    READ            reduce using rule 4 (FuncDecls -> empty .)
    MINUS           reduce using rule 4 (FuncDecls -> empty .)
    NOT             reduce using rule 4 (FuncDecls -> empty .)


state 7

    (5) FuncDecls -> Function . FuncDecls
    (4) FuncDecls -> . empty
    (5) FuncDecls -> . Function FuncDecls
    (17) empty -> .
    (6) Function -> . FunctionHeader FunctionBody
    (7) FunctionHeader -> . FunctionType FUNCTION ID PAR_OPEN ParamList PAR_CLOSE COLON
    (8) FunctionType -> . INT
    (9) FunctionType -> . BOOL
    (10) FunctionType -> . VOID

    VAR             reduce using rule 17 (empty -> .)
    ID              reduce using rule 17 (empty -> .)
    IF              reduce using rule 17 (empty -> .)
    WHILE           reduce using rule 17 (empty -> .)
    FOR             reduce using rule 17 (empty -> .)
    BREAK           reduce using rule 17 (empty -> .)
    PRINT           reduce using rule 17 (empty -> .)
    RETURN          reduce using rule 17 (empty -> .)
    LBRACE          reduce using rule 17 (empty -> .)
    NUMBER          reduce using rule 17 (empty -> .)
    TRUE            reduce using rule 17 (empty -> .)
    FALSE           reduce using rule 17 (empty -> .)
    PAR_OPEN        reduce using rule 17 (empty -> .)
    READ            reduce using rule 17 (empty -> .)
    MINUS           reduce using rule 17 (empty -> .)
    NOT             reduce using rule 17 (empty -> .)
    INT             shift and go to state 10
    BOOL            shift and go to state 11
    VOID            shift and go to state 12

    Function                       shift and go to state 7
    FuncDecls                      shift and go to state 18
    empty                          shift and go to state 6
    FunctionHeader                 shift and go to state 8
    FunctionType                   shift and go to state 9

state 8

    (6) Function -> FunctionHeader . FunctionBody
    (11) FunctionBody -> . LBRACE VarDecls CmdList RBRACE

    LBRACE          shift and go to state 20

    FunctionBody                   shift and go to state 19

state 9

    (7) FunctionHeader -> FunctionType . FUNCTION ID PAR_OPEN ParamList PAR_CLOSE COLON

    FUNCTION        shift and go to state 21


state 10

    (8) FunctionType -> INT .

    FUNCTION        reduce using rule 8 (FunctionType -> INT .)


state 11

    (9) FunctionType -> BOOL .

    FUNCTION        reduce using rule 9 (FunctionType -> BOOL .)


state 12

    (10) FunctionType -> VOID .

    FUNCTION        reduce using rule 10 (FunctionType -> VOID .)


state 13

    (2) ProgramHeader -> PROGRAM ID . SEMICOLON

    SEMICOLON       shift and go to state 22


state 14

    (3) ProgramBody -> FuncDecls VarDecls . Cmd
    (51) Cmd -> . CmdAtrib
    (52) Cmd -> . CmdIf
    (53) Cmd -> . CmdWhile
    (54) Cmd -> . CmdFor
    (55) Cmd -> . CmdBreak
    (56) Cmd -> . CmdPrint
    (57) Cmd -> . CmdReturn
    (58) Cmd -> . CmdSeq
    (59) CmdAtrib -> . ID
    (60) CmdAtrib -> . Expr
    (61) CmdAtrib -> . ID ASSIGN Expr
    (62) CmdIf -> . IF Expr COLON Cmd
    (63) CmdIf -> . IF Expr COLON Cmd ELSE COLON
    (64) CmdWhile -> . WHILE Expr COLON Cmd
    (65) CmdFor -> . FOR CmdAtrib TO Expr COLON Cmd
    (66) CmdBreak -> . BREAK
    (67) CmdPrint -> . PRINT PAR_OPEN ExprList PAR_CLOSE
    (68) CmdReturn -> . RETURN Expr
    (69) CmdSeq -> . LBRACE CmdList RBRACE
    (23) Expr -> . NUMBER
    (24) Expr -> . TRUE
    (25) Expr -> . FALSE
    (26) Expr -> . ID
    (27) Expr -> . Expr BinOp Expr
    (28) Expr -> . UnOp Expr
    (29) Expr -> . PAR_OPEN Expr PAR_CLOSE
    (30) Expr -> . ID PAR_OPEN ExprList PAR_CLOSE
    (31) Expr -> . READ PAR_OPEN PAR_CLOSE
    (45) UnOp -> . MINUS
    (46) UnOp -> . NOT

    ID              shift and go to state 32
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    BREAK           shift and go to state 37
    PRINT           shift and go to state 38
    RETURN          shift and go to state 40
    LBRACE          shift and go to state 41
    NUMBER          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    PAR_OPEN        shift and go to state 39
    READ            shift and go to state 46
    MINUS           shift and go to state 47
    NOT             shift and go to state 48

    Cmd                            shift and go to state 23
    CmdAtrib                       shift and go to state 24
    CmdIf                          shift and go to state 25
    CmdWhile                       shift and go to state 26
    CmdFor                         shift and go to state 27
    CmdBreak                       shift and go to state 28
    CmdPrint                       shift and go to state 29
    CmdReturn                      shift and go to state 30
    CmdSeq                         shift and go to state 31
    Expr                           shift and go to state 33
    UnOp                           shift and go to state 45

state 15

    (18) VarDecls -> empty .

    ID              reduce using rule 18 (VarDecls -> empty .)
    IF              reduce using rule 18 (VarDecls -> empty .)
    WHILE           reduce using rule 18 (VarDecls -> empty .)
    FOR             reduce using rule 18 (VarDecls -> empty .)
    BREAK           reduce using rule 18 (VarDecls -> empty .)
    PRINT           reduce using rule 18 (VarDecls -> empty .)
    RETURN          reduce using rule 18 (VarDecls -> empty .)
    LBRACE          reduce using rule 18 (VarDecls -> empty .)
    NUMBER          reduce using rule 18 (VarDecls -> empty .)
    TRUE            reduce using rule 18 (VarDecls -> empty .)
    FALSE           reduce using rule 18 (VarDecls -> empty .)
    PAR_OPEN        reduce using rule 18 (VarDecls -> empty .)
    READ            reduce using rule 18 (VarDecls -> empty .)
    MINUS           reduce using rule 18 (VarDecls -> empty .)
    NOT             reduce using rule 18 (VarDecls -> empty .)


state 16

    (19) VarDecls -> VarDecl . VarDecls
    (18) VarDecls -> . empty
    (19) VarDecls -> . VarDecl VarDecls
    (17) empty -> .
    (20) VarDecl -> . VAR ID COLON Type SEMICOLON

    ID              reduce using rule 17 (empty -> .)
    IF              reduce using rule 17 (empty -> .)
    WHILE           reduce using rule 17 (empty -> .)
    FOR             reduce using rule 17 (empty -> .)
    BREAK           reduce using rule 17 (empty -> .)
    PRINT           reduce using rule 17 (empty -> .)
    RETURN          reduce using rule 17 (empty -> .)
    LBRACE          reduce using rule 17 (empty -> .)
    NUMBER          reduce using rule 17 (empty -> .)
    TRUE            reduce using rule 17 (empty -> .)
    FALSE           reduce using rule 17 (empty -> .)
    PAR_OPEN        reduce using rule 17 (empty -> .)
    READ            reduce using rule 17 (empty -> .)
    MINUS           reduce using rule 17 (empty -> .)
    NOT             reduce using rule 17 (empty -> .)
    VAR             shift and go to state 17

    VarDecl                        shift and go to state 16
    VarDecls                       shift and go to state 49
    empty                          shift and go to state 15

state 17

    (20) VarDecl -> VAR . ID COLON Type SEMICOLON

    ID              shift and go to state 50


state 18

    (5) FuncDecls -> Function FuncDecls .

    VAR             reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    ID              reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    IF              reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    WHILE           reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    FOR             reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    BREAK           reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    PRINT           reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    RETURN          reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    LBRACE          reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    NUMBER          reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    TRUE            reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    FALSE           reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    PAR_OPEN        reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    READ            reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    MINUS           reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    NOT             reduce using rule 5 (FuncDecls -> Function FuncDecls .)


state 19

    (6) Function -> FunctionHeader FunctionBody .

    INT             reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    BOOL            reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    VOID            reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    VAR             reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    ID              reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    IF              reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    WHILE           reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    FOR             reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    BREAK           reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    PRINT           reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    RETURN          reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    LBRACE          reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    NUMBER          reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    TRUE            reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    FALSE           reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    PAR_OPEN        reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    READ            reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    MINUS           reduce using rule 6 (Function -> FunctionHeader FunctionBody .)
    NOT             reduce using rule 6 (Function -> FunctionHeader FunctionBody .)


state 20

    (11) FunctionBody -> LBRACE . VarDecls CmdList RBRACE
    (18) VarDecls -> . empty
    (19) VarDecls -> . VarDecl VarDecls
    (17) empty -> .
    (20) VarDecl -> . VAR ID COLON Type SEMICOLON

    ID              reduce using rule 17 (empty -> .)
    IF              reduce using rule 17 (empty -> .)
    WHILE           reduce using rule 17 (empty -> .)
    FOR             reduce using rule 17 (empty -> .)
    BREAK           reduce using rule 17 (empty -> .)
    PRINT           reduce using rule 17 (empty -> .)
    RETURN          reduce using rule 17 (empty -> .)
    LBRACE          reduce using rule 17 (empty -> .)
    NUMBER          reduce using rule 17 (empty -> .)
    TRUE            reduce using rule 17 (empty -> .)
    FALSE           reduce using rule 17 (empty -> .)
    PAR_OPEN        reduce using rule 17 (empty -> .)
    READ            reduce using rule 17 (empty -> .)
    MINUS           reduce using rule 17 (empty -> .)
    NOT             reduce using rule 17 (empty -> .)
    VAR             shift and go to state 17

    VarDecls                       shift and go to state 51
    empty                          shift and go to state 15
    VarDecl                        shift and go to state 16

state 21

    (7) FunctionHeader -> FunctionType FUNCTION . ID PAR_OPEN ParamList PAR_CLOSE COLON

    ID              shift and go to state 52


state 22

    (2) ProgramHeader -> PROGRAM ID SEMICOLON .
